# wff_tool

./: build.gradle  screenMatch.properties  sh.exe.stackdump
app/: CMakeLists.txt  build.gradle  buildconfig_example.txt  castielmaindexlist.txt  proguard-rules.pro
app/release/: app-release.apk
app/release/app-release/: AndroidManifest.xml  resources.arsc
app/release/app-release/res/drawable/: tooltip_frame_dark.xml  tooltip_frame_light.xml
app/release/app-release/res/drawable-v21/: abc_dialog_material_background.xml
app/release/app-release/res/layout/: abc_activity_chooser_view.xml  abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_cascading_menu_item_layout.xml  abc_dialog_title_material.xml  abc_expanded_menu_layout.xml  abc_list_menu_item_layout.xml  abc_popup_menu_header_item_layout.xml  abc_popup_menu_item_layout.xml  abc_screen_toolbar.xml  abc_search_dropdown_item_icons_2line.xml  abc_search_view.xml  abc_select_dialog_material.xml  abc_tooltip.xml  activity_main.xml  activity_main2.xml  activity_pullrefresh_layout.xml  activity_test_animator_layout.xml  activity_test_touch_event.xml  activity_test_transition.xml  head_layout.xml  item_image_layout.xml  notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml  notification_template_icon_group.xml  pull_head_layout.xml  refresh_recycleview_layout.xml  scen1.xml  scen2.xml  select_dialog_item_material.xml  select_dialog_multichoice_material.xml  select_dialog_singlechoice_material.xml  support_simple_spinner_dropdown_item.xml
app/release/app-release/res/layout-v16/: notification_template_custom_big.xml
app/release/app-release/res/layout-v17/: abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_title_material.xml  abc_dialog_title_material.xml  abc_popup_menu_header_item_layout.xml  abc_search_view.xml  abc_select_dialog_material.xml  abc_tooltip.xml  notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml  select_dialog_multichoice_material.xml  select_dialog_singlechoice_material.xml
app/release/app-release/res/layout-v21/: abc_screen_toolbar.xml  notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml  notification_template_icon_group.xml
app/release/app-release/res/layout-v22/: abc_alert_dialog_button_bar_material.xml
app/release/app-release/res/layout-v26/: abc_screen_toolbar.xml
app/release/app-release/res/layout-watch-v20/: abc_alert_dialog_button_bar_material.xml
app/release/app-release/res/transition/: test_transitionset.xml
app/src/androidTest/java/com/wff/androidtool/junit/: CaculaterTest.java  OkHttpTest.java
app/src/androidTest/java/com/wff/androidtool/mock/: MockTestTest.java
app/src/androidTest/java/com/wff/androidtool/okio/: OkIOTest.java
app/src/androidTest/java/com/wff/androidtool/rxjava/: RxJava2Test.java
app/src/androidTest/java/com/wff/androidtool/utils/: FileUtilTest.java
app/src/androidTest/java/com/wff/wff_tool/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/wff/wff_tool/junit/: CaculaterTest.java  OkHttpTest.java
app/src/androidTest/java/com/wff/wff_tool/mock/: MockTestTest.java
app/src/androidTest/java/com/wff/wff_tool/okio/: OkIOTest.java
app/src/androidTest/java/com/wff/wff_tool/rxjava/: RxJava2Test.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/wff/androidtool/: ICallBack.aidl  IMyAidlInterface.aidl
app/src/main/aidl/com/wff/androidtool/bean/: MessageBean.aidl
app/src/main/aidl/com/wff/wff_tool/: ICallBack.aidl  IMyAidlInterface.aidl
app/src/main/aidl/com/wff/wff_tool/bean/: MessageBean.aidl
app/src/main/java/com/wff/androidtool/asyctask/: MtAsycTask.java
app/src/main/java/com/wff/androidtool/bean/: BaseBean.java  ImgBean.java  MessageBean.java
app/src/main/java/com/wff/wff_tool/: BaseActivity.java  DrawPathActivity.java  ImageLoaderActivity.java  MainActivity.java  MyApplication.java  MyOpenGLActivity.java  OpenGLaCTIVITY.java  PullRefreshActivity.java  TestAnimatorActivity.java  TestRefreshActivity.java  TestScrollerActivity.java  TestTouchEventActivity.java  TestTransitionActivity.java  WebViewActivity.java
app/src/main/jni/: Android.mk  My.cpp  My.h  MyThread.cpp  MyThread.h  NativeStudyOpencv.cpp  NativeStudyOpencv.h  School.cpp  School.h  com_wff_androidtool_nativecode_NativeObject.h  com_wff_wff_tool_nativecode_NativeObject.h  hello.c  hello.cpp
app/src/main/res/animator/: path_morph.xml  rotate.xml
app/src/main/res/drawable/: animated_vector.xml  ic_cached_black_24dp.xml
app/src/main/res/layout/: activity_custom_linelayout.xml  activity_event_bus.xml  activity_main.xml  activity_main2.xml  activity_material_design.xml  activity_nested_scroll_view.xml  activity_pullrefresh_layout.xml  activity_test_animator_layout.xml  activity_test_custom_view.xml  activity_test_touch_event.xml  activity_test_transition.xml  activity_vector.xml  activity_viewpager.xml  app_bar_material_design.xml  content_material_design.xml  head_layout.xml  item_image_layout.xml  item_viewpager.xml  pull_head_layout.xml  refresh_recycleview_layout.xml  scen1.xml  scen2.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/main/res/values-sw1024dp/: dimens.xml
app/src/main/res/values-sw1365dp/: dimens.xml
app/src/main/res/values-sw384dp/: dimens.xml
app/src/main/res/values-sw392dp/: dimens.xml
app/src/main/res/values-sw400dp/: dimens.xml
app/src/main/res/values-sw410dp/: dimens.xml
app/src/main/res/values-sw411dp/: dimens.xml
app/src/main/res/values-sw432dp/: dimens.xml
app/src/main/res/values-sw480dp/: dimens.xml
app/src/main/res/values-sw533dp/: dimens.xml
app/src/main/res/values-sw592dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw662dp/: dimens.xml
app/src/main/res/values-sw811dp/: dimens.xml
app/src/main/res/values-sw961dp/: dimens.xml
app/src/test/java/com/wff/wff_tool/: ExampleUnitTest.java
(+177 files in other folders)
